First (Ugly) functional version.

--- a/projects/Disthorzion-vst3.vcxproj
+++ b/projects/Disthorzion-vst3.vcxproj
@@ -173,6 +173,10 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
+      <GenerateMapFile>false</GenerateMapFile>
+      <MapExports>false</MapExports>
+      <AssemblyDebug>false</AssemblyDebug>
     </Link>
     <PostBuildEvent />
   </ItemDefinitionGroup>
