--- a/projects/Disthorzion-vst3.vcxproj.filters
+++ b/projects/Disthorzion-vst3.vcxproj.filters
@@ -134,6 +134,7 @@
     <ClCompile Include="..\..\..\IGraphics\IGraphicsEditorDelegate.cpp">
       <Filter>IGraphics</Filter>
     </ClCompile>
+    <ClCompile Include="..\DCBlocker.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="../config.h" />
@@ -357,6 +358,7 @@
     <ClInclude Include="..\..\..\IPlug\ISender.h">
       <Filter>IPlug</Filter>
     </ClInclude>
+    <ClInclude Include="..\DCBlocker.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="resources">
