--- a/projects/Disthorzion-app.vcxproj
+++ b/projects/Disthorzion-app.vcxproj
@@ -317,6 +317,7 @@
     <ClInclude Include="..\..\..\IPlug\IPlug_include_in_plug_hdr.h" />
     <ClInclude Include="..\..\..\IPlug\IPlug_include_in_plug_src.h" />
     <ClInclude Include="..\..\..\IPlug\ISender.h" />
+    <ClInclude Include="..\DCBlocker.h" />
     <ClInclude Include="..\Disthorzion.h" />
     <ClInclude Include="..\resources\resource.h" />
   </ItemGroup>
@@ -360,6 +361,7 @@
     <ClCompile Include="..\..\..\IPlug\IPlugPluginBase.cpp" />
     <ClCompile Include="..\..\..\IPlug\IPlugProcessor.cpp" />
     <ClCompile Include="..\..\..\IPlug\IPlugTimer.cpp" />
+    <ClCompile Include="..\DCBlocker.cpp" />
     <ClCompile Include="..\Disthorzion.cpp" />
   </ItemGroup>
   <ItemGroup>
