--- a/projects/Disthorzion-app.vcxproj.filters
+++ b/projects/Disthorzion-app.vcxproj.filters
@@ -77,6 +77,7 @@
     <ClCompile Include="..\..\..\IGraphics\Drawing\IGraphicsSkia.cpp">
       <Filter>IGraphics\Drawing</Filter>
     </ClCompile>
+    <ClCompile Include="..\DCBlocker.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Disthorzion.h" />
@@ -258,6 +259,7 @@
     <ClInclude Include="..\..\..\IPlug\ISender.h">
       <Filter>IPlug</Filter>
     </ClInclude>
+    <ClInclude Include="..\DCBlocker.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="resources">
