Created presets. Set Distortion category.

--- a/projects/Disthorzion-vst3.vcxproj.filters
+++ b/projects/Disthorzion-vst3.vcxproj.filters
@@ -437,5 +437,6 @@
     <None Include="..\config\Disthorzion-mac.xcconfig">
       <Filter>config</Filter>
     </None>
+    <None Include="..\README.md" />
   </ItemGroup>
 </Project>
