--- a/projects/Disthorzion-vst3.vcxproj
+++ b/projects/Disthorzion-vst3.vcxproj
@@ -406,6 +406,7 @@
     <None Include="..\config\Disthorzion-win.props">
       <SubType>Designer</SubType>
     </None>
+    <None Include="..\README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
