Moved DCBlocker to https://github.com/danielsacco/dsptk

--- a/projects/Disthorzion-vst3.vcxproj
+++ b/projects/Disthorzion-vst3.vcxproj
@@ -118,6 +118,8 @@
     <IntDir>$(SolutionDir)build-win\vst3\$(Platform)\$(Configuration)\int\</IntDir>
     <LinkIncremental />
     <TargetExt>.vst3</TargetExt>
+    <IncludePath>E:\Dev\Projects\dsptk\out\install\x64-debug\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Dev\Projects\dsptk\out\install\x64-debug\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)build-win\vst3\$(Platform)\$(Configuration)\</OutDir>
@@ -172,7 +174,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>dsptk.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
       <GenerateMapFile>false</GenerateMapFile>
       <MapExports>false</MapExports>
