--- a/projects/Disthorzion-app.vcxproj
+++ b/projects/Disthorzion-app.vcxproj
@@ -116,6 +116,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IntDir>$(SolutionDir)build-win\app\$(Platform)\$(Configuration)\int\</IntDir>
     <LinkIncremental />
+    <IncludePath>E:\Dev\Projects\dsptk\out\install\x64-debug\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Dev\Projects\dsptk\out\install\x64-debug\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)build-win\app\$(Platform)\$(Configuration)\</OutDir>
@@ -167,7 +169,7 @@
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>$(APP_LIBS);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(APP_LIBS);dsptk.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
     </Link>
     <ResourceCompile />
@@ -317,7 +319,6 @@
     <ClInclude Include="..\..\..\IPlug\IPlug_include_in_plug_hdr.h" />
     <ClInclude Include="..\..\..\IPlug\IPlug_include_in_plug_src.h" />
     <ClInclude Include="..\..\..\IPlug\ISender.h" />
-    <ClInclude Include="..\DCBlocker.h" />
     <ClInclude Include="..\Disthorzion.h" />
     <ClInclude Include="..\resources\resource.h" />
   </ItemGroup>
@@ -361,7 +362,6 @@
     <ClCompile Include="..\..\..\IPlug\IPlugPluginBase.cpp" />
     <ClCompile Include="..\..\..\IPlug\IPlugProcessor.cpp" />
     <ClCompile Include="..\..\..\IPlug\IPlugTimer.cpp" />
-    <ClCompile Include="..\DCBlocker.cpp" />
     <ClCompile Include="..\Disthorzion.cpp" />
   </ItemGroup>
   <ItemGroup>
