--- a/resources/Disthorzion-macOS-AUv3-Info.plist
+++ b/resources/Disthorzion-macOS-AUv3-Info.plist
@@ -34,13 +34,13 @@
 					<key>description</key>
 					<string>Disthorzion</string>
 					<key>manufacturer</key>
-					<string>Acme</string>
+					<string>DES</string>
 					<key>name</key>
 					<string>DES: Disthorzion</string>
 					<key>sandboxSafe</key>
 					<true/>
 					<key>subtype</key>
-					<string>Ipef</string>
+					<string>DSTH</string>
 					<key>tags</key>
 					<array>
 						<string>Effects</string>
